--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-cors-headers==3.8.0
 django-extensions==3.1.3
 djangorestframework==3.12.4
 drf-yasg==1.20.0
+et-xmlfile==1.1.0
 idna==3.2
 inflection==0.5.1
 ipython==7.28.0
@@ -19,7 +20,10 @@ jedi==0.18.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
+numpy==1.21.4
+openpyxl==3.0.9
 packaging==21.0
+pandas==1.3.4
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -29,10 +33,12 @@ psycopg2-binary==2.9.1
 ptyprocess==0.7.0
 Pygments==2.10.0
 pyparsing==2.4.7
+python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
+six==1.16.0
 sqlparse==0.4.2
 traitlets==5.1.0
 uritemplate==3.0.1
