Fix urls account

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,18 @@ appnope==0.1.2
 asgiref==3.4.1
 backcall==0.2.0
 certifi==2021.5.30
+cffi==1.15.0
 charset-normalizer==2.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==36.0.1
 decorator==5.1.0
+defusedxml==0.7.1
+dj-rest-auth==2.2.3
 Django==3.2.6
+django-allauth==0.48.0
 django-cors-headers==3.8.0
+django-crispy-forms==1.14.0
 django-extensions==3.1.3
 djangorestframework==3.12.4
 drf-yasg==1.20.0
@@ -21,6 +27,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 numpy==1.21.4
+oauthlib==3.2.0
 openpyxl==3.0.9
 packaging==21.0
 pandas==1.3.4
@@ -31,11 +38,16 @@ Pillow==8.3.2
 prompt-toolkit==3.0.20
 psycopg2-binary==2.9.1
 ptyprocess==0.7.0
+pycparser==2.21
 Pygments==2.10.0
+PyJWT==2.3.0
+pymarc==4.1.2
 pyparsing==2.4.7
 python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2021.1
 requests==2.26.0
+requests-oauthlib==1.3.1
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 six==1.16.0
