--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appnope==0.1.2
 asgiref==3.4.1
 backcall==0.2.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
 certifi==2021.5.30
 cffi==1.15.0
 charset-normalizer==2.0.4
@@ -52,6 +54,7 @@ requests-oauthlib==1.3.1
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
 traitlets==5.1.0
 uritemplate==3.0.1
