--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,10 @@ django-extensions==3.1.3
 djangorestframework==3.12.4
 drf-yasg==1.20.0
 et-xmlfile==1.1.0
+farsi-tools==0.2
 idna==3.2
 inflection==0.5.1
+install==1.3.5
 ipython==7.28.0
 itypes==1.2.0
 jdatetime==4.0.0
@@ -41,6 +43,7 @@ Pillow==8.3.2
 prompt-toolkit==3.0.20
 psycopg2-binary==2.9.1
 ptyprocess==0.7.0
+PyArabic==0.6.14
 pycparser==2.21
 Pygments==2.10.0
 PyJWT==2.3.0
@@ -57,6 +60,7 @@ six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 traitlets==5.1.0
+typing==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.6
 wcwidth==0.2.5
