--- a/liara_nginx.conf
+++ b/liara_nginx.conf
@@ -1,3 +1,8 @@
+add_header X-Frame-Options DENY always;
+add_header X-Content-Type-Options: nosniff;
+add_header X-XSS-Protection "1; mode=block" always;
+add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+
 location /media {
   add_header Access-Control-Allow-Origin *;
   alias /usr/src/app/media;
