--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+amqp==5.1.1
 appnope==0.1.2
 asgiref==3.4.1
 backcall==0.2.0
 beautifulsoup4==4.11.1
+billiard==3.6.4.0
 bs4==0.0.1
+celery==5.2.6
 certifi==2021.5.30
 cffi==1.15.0
 charset-normalizer==2.0.4
+click==8.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==36.0.1
@@ -29,6 +36,7 @@ itypes==1.2.0
 jdatetime==4.0.0
 jedi==0.18.0
 Jinja2==3.0.1
+kombu==5.2.4
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 numpy==1.21.4
@@ -51,7 +59,7 @@ pymarc==4.1.2
 pyparsing==2.4.7
 python-dateutil==2.8.2
 python3-openid==3.2.0
-pytz==2021.1
+pytz==2022.1
 requests==2.26.0
 requests-oauthlib==1.3.1
 ruamel.yaml==0.17.16
@@ -63,4 +71,5 @@ traitlets==5.1.0
 typing==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.6
+vine==5.0.0
 wcwidth==0.2.5
